[omnibox cocoa] Only cap height of content line

We began capping the result lines, but we were erroneously capping
both the content and description lines. We only want to cap the
content line, leaving the description line free to expand for
dictionary definitions, etc.

Bug: 798199
Change-Id: I5fc86a5254facfd5b92f95dcbe10ce94d7bfb9c0
Reviewed-on: https://chromium-review.googlesource.com/850586
Reviewed-by: Rachel Blum <groby@chromium.org>
Commit-Queue: Kevin Bailey <krb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527348}
Former-commit-id: 15d7d35c2470c8e276046790fc41d8969419f11e